[package]
name = "risp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.0"
itertools = "0.11"
nix = { version = "0.27", default_features = false, features = ["time"] }
nom = "7.1"
rustyline = "12.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
